# RumahAdat_classification

./: .pdm-python  README.md  pyproject.toml  requirements.txt
src/: app.py  rumah_adat.py
